# haskell-ide-engine

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  Changelog.md  GenChangelogs.hs  LICENSE  Makefile  README.md  Shakefile.hs  appveyor.yml  azure-pipelines.yml  build-all.ps1  cabal-hie-install  cabal-hie-install.cmd  cabal-install.cmd  cabal.project  cabal.project-8.6.5  cabal.project-8.8.2  cabal.project-8.8.3  cabal.project.8.4.1.freeze  cabal.project.8.4.2.freeze  cabal.project.8.4.3.freeze  cabal.project.8.4.4.freeze  cabal.project.8.6.1.freeze  cabal.project.8.6.2.freeze  cabal.project.8.6.3.freeze  cabal.project.8.6.5.freeze  circle.yml  deploy-docs.sh  emacs_tests.sh  genindex.html  haskell-ide-engine.cabal  haskell-ide.cabal  hie.yaml.cbl  hie.yaml.stack  index.html  install.hs  make-build-all.bat  objects.inv  (+27 more)
.azure/: linux-cabal.bashrc  linux-cabal.yml  linux-installhs-stack.yml  linux-stack.bashrc  linux-stack.yml  linux.bashrc  macos-cabal.bashrc  macos-installhs-cabal.yml  macos-installhs-stack.yml  macos-stack.yml  windows-cabal.bashrc  windows-cabal.yml  windows-installhs-cabal.yml  windows-installhs-stack.yml  windows-stack.bashrc  windows-stack.yml  windows.bashrc
app/: Main.hs  (+5 more)
example-plugin/: haskell-ide-example-plugin.cabal
example-plugin/Haskell/Ide/: ExamplePlugin.hs
haskell-ide-plugin-api/: haskell-ide-plugin-api.cabal
haskell-ide-plugin-api/Haskell/Ide/: PluginDescriptor.hs
haskell-ide-plugin-api/Haskell/Ide/Engine/: PluginDescriptor.hs  PluginUtils.hs
haskell-ide-plugin-ghcmod/: haskell-ide-plugin-ghcmod.cabal
haskell-ide-plugin-ghcmod/Haskell/Ide/: GhcModPlugin.hs
hie-apply-refact/: hie-apply-refact.cabal
hie-apply-refact/Haskell/Ide/: ApplyRefactPlugin.hs
hie-base/: hie-base.cabal
hie-base/Haskell/Ide/Engine/: PluginTypes.hs  SemanticTypes.hs
hie-base/Haskell/Ide/Engine/PluginTypes/: Singletons.hs
hie-bios/: .travis.yml  ChangeLog  README.md  default.nix  hie-bios.cabal  shell.nix
hie-bios/exe/: biosc.hs
hie-bios/lib/HIE/: Bios.hs
hie-bios/lib/HIE/Bios/: Check.hs  Cradle.hs  Doc.hs  Flag.hs  GHCApi.hs  Gap.hs  Internal.hs  Lang.hs  Load.hs  Logger.hs
hie-bios/nix/: default.nix  packages.nix  sources.json  sources.nix
hie-bios/src/: biosc.hs
hie-bios/src/HIE/: Bios.hs
hie-bios/src/HIE/Bios/: Check.hs  Config.hs  Cradle.hs  Debug.hs  GHCApi.hs  Ghc.hs  Load.hs  Things.hs  Types.hs
hie-bios/test/: Main.hs
hie-bios/wrappers/: bazel  cabal
hie-brittany/: hie-brittany.cabal
hie-brittany/Haskell/Ide/: BrittanyPlugin.hs
hie-build-plugin/: hie-build-plugin.cabal
hie-build-plugin/Haskell/Ide/: BuildPlugin.hs
hie-eg-plugin-async/: hie-eg-plugin-async.cabal
hie-eg-plugin-async/Haskell/Ide/: ExamplePluginAsync.hs
hie-example-plugin2/: hie-example-plugin2.cabal
hie-example-plugin2/Haskell/Ide/: ExamplePlugin2.hs
hie-ghc-mod/: hie-ghc-mod.cabal
hie-ghc-mod/Haskell/Ide/: GhcModPlugin.hs
hie-ghc-tree/: hie-ghc-tree.cabal
hie-ghc-tree/Haskell/Ide/: GhcTreePlugin.hs
hie-haddock/: hie-haddock.cabal
hie-haddock/Haskell/Ide/: HaddockPlugin.hs
hie-hare/: hie-hare.cabal
hie-hare/Haskell/Ide/: HaRePlugin.hs
hie-hoogle/: hie-hoogle.cabal
hie-hoogle/Haskell/Ide/: HooglePlugin.hs
hie-ide-backend/: hie-ide-backend.cabal
hie-ide-backend/Haskell/Ide/: IdeBackend.hs
hie-plugin-api/: hie-plugin-api.cabal
hie-plugin-api/Haskell/Ide/Engine/: ArtifactMap.hs  Compat.hs  Config.hs  Context.hs  Cradle.hs  ExtensibleState.hs  Ghc.hs  GhcCompat.hs  GhcModuleCache.hs  GhcUtils.hs  IdeFunctions.hs  Load.hs  LocMap.hs  Logger.hs  ModuleCache.hs  ModuleCacheTypes.hs  ModuleLoader.hs  Monad.hs  MonadFunctions.hs  MonadTypes.hs  MultiThreadState.hs  PluginApi.hs  PluginDescriptor.hs  PluginTypes.hs  PluginUtils.hs  PluginsIdeMonads.hs  Process.hs  SemanticTypes.hs  TypeMap.hs
install/: BuildSystem.hs  Install.hs  hie-install.cabal  shake.yaml
install/src/: Cabal.hs  Env.hs  Help.hs  HieInstall.hs  Install.hs  Print.hs  Stack.hs  Version.hs
test/testdata/: .hlint.yaml  ApplyRefact.hs  ApplyRefact.refactored.hs  ApplyRefact2.hs  ApplyRefactError.hs  CodeActionImportList.hs  CodeActionImportListElaborate.hs  CodeActionRename.hs  FileWithWarning.hs  FuncTest.hs  FuncTestFail.hs  HaReGA1.hs  HlintParseFail.hs  HlintPragma.hs  Symbols.hs  Types.hs  stack.yaml  testdata.cabal
test/testdata/addPackageTest/cabal/: add-package-test.cabal
test/testdata/addPackageTest/hpack/: .gitignore  asdf.cabal  package.yaml
test/testdata/addPackageTest/hpack-exe/: package.yaml
test/testdata/addPackageTest/hpack-lib/: package.yaml
test/testdata/addPackageTest/hybrid-exe/: asdf.cabal  package.yaml
test/testdata/addPackageTest/hybrid-lib/: asdf.cabal
test/testdata/addPackageTest/hybrid-lib/app/: Asdf.hs
test/testdata/badProjects/cabal/: stack.yaml
test/testdata/cabal-helper/implicit-exe/: implicit-exe.cabal
test/testdata/cabal-helper/mono-repo/A/: A.cabal
test/testdata/cabal-helper/mono-repo/B/: B.cabal
test/testdata/cabal-helper/mono-repo/C/: C.cabal
test/testdata/cabal-helper/multi-source-dirs/: multi-source-dirs.cabal
test/testdata/cabal-helper/simple-cabal/: simple-cabal-test.cabal
test/testdata/cabal-helper/simple-stack/: simple-stack-test.cabal
test/testdata/cabal-helper/sub-package/: sub-package.cabal
test/testdata/cabal-helper/sub-package/plugins-api/: plugins-api.cabal
test/testdata/completion/: Completion.hs
test/testdata/context/: ExampleContext.hs
test/testdata/definition/: .hie-bios
test/testdata/gototest/: stack.yaml  test.cabal
test/testdata/gototest/src/: Lib.hs  Lib2.hs
test/testdata/liquid/.liquid/: Evens.hs.err  Evens.hs.json  Evens.hs.vim.annot
test/testdata/multiComponent/: Foo.hs  Main.hs  OtherMain.hs  multi-component.cabal
test/testdata/redundantImportTest/: test.cabal
test/testdata/redundantImportTest/src/: CodeActionRedundant.hs
test/testdata/wErrorTest/: test.cabal
test/testdata/wrapper/8.2.1/: stack.yaml
test/testdata/wrapper/8.8.1/: stack.yaml
test/testdata/wrapper/lts-11.14/: stack.yaml
test/testdata/wrapper/lts-14.18/: hie.yaml  stack.yaml
(+224 files in other folders)
