name:                haskell-ide-engine
version:             0.8.0.0
synopsis:            Provide a common engine to power any Haskell IDE
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-ide-engine#readme
license:             BSD3
license-file:        LICENSE
author:              Many, TBD when we release
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 - 2019, TBD
category:            Web
build-type:          Simple
-- cabal-helper for cabal 2.2/GHC 8.4 needs a cabal version >= 2
cabal-version:       >=2.0

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Haskell.Ide.Engine.Channel
                       Haskell.Ide.Engine.LSP.CodeActions
                       Haskell.Ide.Engine.Plugin.Base
                       Haskell.Ide.Engine.LSP.Reactor
                       Haskell.Ide.Engine.Options
                       Haskell.Ide.Engine.Plugin.ApplyRefact
                       Haskell.Ide.Engine.Plugin.Brittany
                       Haskell.Ide.Engine.Plugin.Build
                       Haskell.Ide.Engine.Plugin.Example2
                       Haskell.Ide.Engine.Plugin.Floskell
                       Haskell.Ide.Engine.Plugin.GhcMod
                       Haskell.Ide.Engine.Plugin.HaRe
                       Haskell.Ide.Engine.Plugin.Haddock
                       Haskell.Ide.Engine.Plugin.HfaAlign
                       Haskell.Ide.Engine.Plugin.Hoogle
                       Haskell.Ide.Engine.Plugin.HsImport
                       Haskell.Ide.Engine.Plugin.Liquid
                       Haskell.Ide.Engine.Plugin.Package
                       Haskell.Ide.Engine.Plugin.Package.Compat
                       Haskell.Ide.Engine.Plugin.Pragmas
                       Haskell.Ide.Engine.Scheduler
                       Haskell.Ide.Engine.Support.Fuzzy
                       Haskell.Ide.Engine.Support.HieExtras
                       Haskell.Ide.Engine.Transport.JsonStdio
                       Haskell.Ide.Engine.Transport.LspStdio
                       Haskell.Ide.Engine.Types
  other-modules:       Paths_haskell_ide_engine
  build-depends:       Cabal >= 1.22
                     , Diff
                     , HaRe
                     , aeson
                     , apply-refact
                     , async
                     , base >= 4.9 && < 5
                     , brittany
                     , bytestring
                     , Cabal
                     , cabal-helper >= 0.8.0.4
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , floskell
                     , fold-debounce
                     , ghc >= 8.0.1
                     , ghc-exactprint
                     , ghc-mod >= 5.9.0.0
                     , ghc-mod-core >= 5.9.0.0
                     , gitrev >= 1.1
                     , haddock-api
                     , haddock-library
                     , haskell-lsp == 0.9.*
                     , haskell-lsp-types == 0.9.*
                     , haskell-src-exts
                     , hie-plugin-api
                     , hlint >= 2.0.11
                     , hoogle >= 5.0.13
                     , hsimport
                     , hslogger
                     , lens >= 4.15.2
                     , monad-control
                     , monoid-subclasses > 0.4
                     , mtl
                     , optparse-simple >= 0.0.3
                     , parsec
                     , process
                     , safe
                     , sorted-list >= 0.2.1.0
                     , stm
                     , tagsoup
                     , text
                     , transformers
                     , unordered-containers
                     , vector
                     , yaml >= 0.8.31
                     , yi-rope
  ghc-options:         -Wall -Wredundant-constraints
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010

executable hie
  hs-source-dirs:      app
  main-is:             MainHie.hs
  other-modules:       Paths_haskell_ide_engine
  build-depends:       base
                     , directory
                     , ghc-mod-core
                     , haskell-ide-engine
                     , haskell-lsp
                     , hie-plugin-api
                     , hslogger
                     , optparse-simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wredundant-constraints
                       -with-rtsopts=-T
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010


executable hie-wrapper
  hs-source-dirs:      app
  main-is:             HieWrapper.hs
  other-modules:       Paths_haskell_ide_engine
  build-depends:       base
                     , directory
                     , ghc-mod-core
                     , haskell-ide-engine
                     , haskell-lsp
                     , hie-plugin-api
                     , hslogger
                     , optparse-simple
                     , process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wredundant-constraints
                       -with-rtsopts=-T
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010

library hie-test-utils
  hs-source-dirs:      test/utils
  exposed-modules:     TestUtils
  build-depends:       base
                     , haskell-ide-engine
                     , haskell-lsp
                     , hie-plugin-api
                     , aeson
                     , blaze-markup
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , ghc-mod-core
                     , hslogger
                     , hspec
                     , hspec-core
                     , stm
                     , text
                     , unordered-containers
                     , yaml
  ghc-options:         -Wall -Wredundant-constraints
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010

test-suite unit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/unit
  main-is:             Main.hs
  other-modules:       ApplyRefactPluginSpec
                       CodeActionsSpec
                       DiffSpec
                       ExtensibleStateSpec
                       GhcModPluginSpec
                       LiquidSpec
                       HaRePluginSpec
                       HooglePluginSpec
                       JsonSpec
                       Spec
  build-depends:       QuickCheck
                     , aeson
                     , base
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , free
                     , haskell-ide-engine
                     , haskell-lsp-types >= 0.4
                     , hie-test-utils
                     , hie-plugin-api
                     , hoogle > 5.0.11
                     , hspec
                     , quickcheck-instances
                     , text
                     , unordered-containers

  ghc-options:         -Wall -Wredundant-constraints
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover

test-suite dispatcher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/dispatcher
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , data-default
                     , directory
                     , filepath
                     , ghc
                     , haskell-ide-engine
                     , haskell-lsp-types
                     , hie-test-utils
                     , hie-plugin-api
                     , hspec
                     , stm
                     , text
                     , unordered-containers

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wredundant-constraints
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover

test-suite plugin-dispatcher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/plugin-dispatcher
  main-is:             Main.hs
  build-depends:       base
                     , data-default
                     , haskell-ide-engine
                     , haskell-lsp-types
                     , hie-plugin-api
                     , hie-test-utils
                     , hspec
                     , stm
                     , text

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wredundant-constraints
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010

test-suite func-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/functional
  main-is:             Main.hs
  other-modules:       CompletionSpec
                     , CommandSpec
                     , DeferredSpec
                     , DefinitionSpec
                     , DiagnosticsSpec
                     , FormatSpec
                     , FunctionalBadProjectSpec
                     , FunctionalCodeActionsSpec
                     , FunctionalLiquidSpec
                     , FunctionalSpec
                     , HaReSpec
                     , HighlightSpec
                     , HoverSpec
                     , ReferencesSpec
                     , RenameSpec
                     , SymbolsSpec
                     , TypeDefinitionSpec
                     , Utils
  -- This cannot currently be handled by hie (cabal-helper)
  -- build-tool-depends:  haskell-ide-engine:hie
  build-depends:       aeson
                     , base
                     , data-default
                     , directory
                     , filepath
                     , lsp-test >= 0.5.1.1 && < 0.5.2
                     , haskell-ide-engine
                     , haskell-lsp-types >= 0.4
                     , hie-test-utils
                     , hie-plugin-api
                     , hspec
                     , lens
                     , text
                     , unordered-containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wredundant-constraints
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover

test-suite wrapper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/wrapper
  main-is:             HieWrapper.hs
  build-depends:       base
                     , hspec
                     , directory
                     , process
                     , haskell-ide-engine
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wredundant-constraints
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/haskell/haskell-ide-engine
