name:                haskell-ide
version:             0.1.0.0
synopsis:            Provide a common engine to power any Haskell IDE
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-ide#readme
license:             BSD3
license-file:        LICENSE
author:              Many,TBD when we release
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-ide
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-ide
  default-language:    Haskell2010

test-suite haskell-ide-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-ide
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell/haskell-ide
