name:                haskell-ide-plugin-api
version:             0.1.0.0
synopsis:            Haskell IDE API for plugin communication
license:             BSD3
license-file:        ../LICENSE
author:              Many,TBD when we release
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Haskell.Ide.PluginDescriptor
  build-depends:       base >= 4.7 && < 5
                     , containers
  ghc-options:         -Wall
  default-language:    Haskell2010
