name:                hie-apply-refact
version:             0.1.0.0
synopsis:            Haskell IDE Apply Refact plugin
license:             BSD3
license-file:        ../LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  exposed-modules:     Haskell.Ide.ApplyRefactPlugin
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , apply-refact
                     , containers
                     , directory
                     , either
                     , extra
                     , filepath
                     , ghc-mod
                     , haskell-src-exts
                     , hie-base
                     , hie-plugin-api
                     , hlint
                     , refact
                     , text
                     , transformers
                     , vinyl >= 0.5
  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
